financial/kube/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: llama3-70b-ingress
spec:
  ingressClassName: haproxy
  rules:
  - host: financial.nrp-nautilus.io
    http:
      paths:
      - backend:
          service:
            name: llama3-70b-service
            port:
              name: http
        path: /
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - financial.nrp-nautilus.io
---
apiVersion: v1
kind: Service
metadata:
  name: llama3-70b-service
  labels:
    app: vllm
spec:
  selector:
    app: vllm
  ports:
  - name: http
    protocol: TCP
    port: 8000
